:bricks: translate de la page d'accueil en français + anglais

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,2 +1,11 @@
-ready_to_escape : READY TO ESCAPE
-live_an_amazing_story : Live an amazing story, beautiful and full of surprise
+ready_to_escape : 'READY TO ESCAPE'
+live_an_amazing_story : 'Live an amazing story, beautiful and full of surprise'
+see_more : 'See more ...'
+feedback_one : '"I recently tried an escape game with friends and it was an amazing experience! The puzzles were challenging but not impossible, and the theme was immersive. Highly recommend trying it out!"'
+feedback_two : '"I''ve done several escape games before, but this one was by far the best. The attention to detail in the room design and the quality of the puzzles really made it stand out. Can''t wait to try another one!"'
+feedback_three : '"If you''re looking for a fun and unique activity to do with friends, I highly recommend trying an escape game. It''s a great way to challenge yourself and work together as a team. Plus, the satisfaction of solving each puzzle is unbeatable!"'
+gift_card : 'Gift Card'
+because_experience_are_better : 'Because experience are better than materials gifts'
+our_partners : 'Our Partners'
+these_companies_celebrated : 'These companies celebrated their corporate escape adventure with us.'
+users_feedback : 'Users Feedback'
