--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,2 +1,11 @@
-ready_to_escape : PRÊT À VOUS ÉCHAPPER
-live_an_amazing_story : Vivez des aventures incroyables, magnifique, et pleine de surprises
+ready_to_escape: 'PRÊT À S''ÉCHAPPER'
+live_an_amazing_story: 'Vivez une histoire incroyable, belle et pleine de surprises'
+see_more: 'Voir plus ...'
+feedback_one: '"J''ai récemment essayé un jeu d''évasion avec des amis et c''était une expérience incroyable ! Les énigmes étaient difficiles mais pas impossibles, et le thème était immersif. Je recommande vivement de l''essayer !"'
+feedback_two: '"J''ai fait plusieurs jeux d''évasion auparavant, mais celui-ci était de loin le meilleur. L''attention portée aux détails dans la conception de la salle et la qualité des énigmes l''ont vraiment fait ressortir. J''ai hâte d''en essayer un autre !"'
+feedback_three: '"Si vous cherchez une activité amusante et unique à faire avec des amis, je recommande vivement d''essayer un jeu d''évasion. C''est un excellent moyen de vous mettre au défi et de travailler ensemble en équipe. De plus, la satisfaction de résoudre chaque énigme est incomparable !"'
+gift_card: 'Carte-cadeau'
+because_experience_are_better: 'Parce que les expériences sont meilleures que les cadeaux matériels'
+our_partners: 'Nos partenaires'
+these_companies_celebrated: 'Ces entreprises ont célébré leur aventure d''évasion d''entreprise avec nous.'
+users_feedback : 'Retour utilisateurs'
