:bricks: translate de toutes les pages

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -9,3 +9,22 @@ because_experience_are_better : 'Because experience are better than materials gi
 our_partners : 'Our Partners'
 these_companies_celebrated : 'These companies celebrated their corporate escape adventure with us.'
 users_feedback : 'Users Feedback'
+looking_for_the_perfect : 'Looking for the perfect gift for that special someone? Look no further than our gift cards! With our easy-to-use website, you can purchase gift cards in any amount, and send them instantly to your loved ones. Whether it''s for a birthday, anniversary, or just to say "thank you," our gift cards are the perfect way to show you care. Plus, with no expiration date and the ability to use them on anything in our store, our gift cards are a gift that keeps on giving. So why wait? Purchase your gift card today and give the gift of choice and convenience!'
+insert_the_value_you : 'Insert the value you want to offer'
+buy_now : 'Buy now'
+our_gift_cards_are : 'Our gift cards are not only easy to purchase, but they''re also easy to redeem. Your recipient can simply enter their gift card code at checkout, and the value of the card will be applied to their purchase. Plus, with a wide variety of products available on our website, from clothing and accessories to home decor and electronics, there''s something for everyone to enjoy. And the best part? Our gift cards never expire, so your loved ones can use them whenever they''re ready to make a purchase. This makes them a great gift option for those who are hard to shop for or who have busy schedules. And with no additional fees or hidden charges, you can rest assured that you''re getting a great deal. So why not give the gift of choice with our easy-to-use gift cards? Purchase now and make someone''s day!'
+our_adventure_header : 'OUR ADVENTURE'
+write_to_us : 'Write to us'
+or_if_you_need : 'Or if you need to call us'
+where_we_are : 'Where we are'
+book : 'Book'
+first_name : 'First name :'
+last_name : 'Last name :'
+escape_game : 'Escape game :'
+number_of_people : 'Number of people :'
+chose_an_escape : 'Chose an Escape game'
+gift_card_header : 'GIFT CARD'
+our_escape_game : 'Our Escape Game'
+in_case_which_you : 'In case which you don''t find your answer, contact us here'
+click_here: 'Click here'
+adress : 'Adress : Am Krebsbach 2g, 79241 Ihringen, Germany'
