--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -9,3 +9,22 @@ because_experience_are_better: 'Parce que les expériences sont meilleures que l
 our_partners: 'Nos partenaires'
 these_companies_celebrated: 'Ces entreprises ont célébré leur aventure d''évasion d''entreprise avec nous.'
 users_feedback : 'Retour utilisateurs'
+looking_for_the_perfect : 'Vous êtes à la recherche du cadeau idéal pour un être cher ? Ne cherchez pas plus loin que nos cartes-cadeaux ! Grâce à notre site web convivial, vous pouvez acheter des cartes-cadeaux de n''importe quel montant et les envoyer instantanément à vos proches. Qu''il s''agisse d''un anniversaire, d''une fête ou d''un simple remerciement, nos cartes-cadeaux sont le moyen idéal de montrer que vous tenez à eux. De plus, sans date d''expiration et avec la possibilité de les utiliser sur tout ce qui se trouve dans notre magasin, nos cartes-cadeaux sont un cadeau qui ne s''arrête jamais. Alors, pourquoi attendre ? Achetez votre carte-cadeau dès aujourd''hui et offrez le cadeau du choix et de la commodité !'
+insert_the_value_you : 'Insérez la valeur que vous souhaitez offrir'
+buy_now : 'Acheter'
+our_gift_cards_are : 'Nos cartes-cadeaux sont non seulement faciles à acheter, mais aussi à échanger. Votre destinataire n''a qu''à entrer le code de la carte-cadeau à la caisse, et la valeur de la carte sera appliquée à son achat. De plus, grâce à la grande variété de produits disponibles sur notre site Web, des vêtements et accessoires à la décoration intérieure et à l''électronique, tout le monde y trouvera son compte. Et le meilleur ? Nos cartes-cadeaux n''expirent jamais, de sorte que vos proches peuvent les utiliser dès qu''ils sont prêts à faire un achat. C''est donc une excellente option de cadeau pour ceux qui sont difficiles à satisfaire ou qui ont un emploi du temps chargé. Et comme il n''y a pas de frais supplémentaires ou de frais cachés, vous pouvez être sûr de faire une bonne affaire. Alors pourquoi ne pas offrir le cadeau du choix avec nos cartes-cadeaux faciles à utiliser ? Achetez-les maintenant et faites plaisir à quelqu''un !'
+our_adventure_header : 'NOS AVENTURES'
+write_to_us : 'Écrivez-nous'
+or_if_you_need : 'Ou si vous avez besoin de nous appeler'
+where_we_are : 'Où nous sommes'
+book : 'Réserver'
+first_name : 'Prénom :'
+last_name : 'Nom :'
+escape_game : 'Escape game :'
+number_of_people : 'Nombre de personnes :'
+chose_an_escape : 'Choisir un Escape Game'
+gift_card_header : 'CARTE CADEAU'
+our_escape_game : 'Nos Escape Game'
+in_case_which_you : 'Si vous ne trouvez pas votre réponse, contactez-nous ici'
+click_here : 'Cliquez ici'
+adress : 'Adresse : Am Krebsbach 2g, 79241 Ihringen, Allemagne'
