:bricks: création + translate des pages du footer

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -28,3 +28,134 @@ our_escape_game : 'Our Escape Game'
 in_case_which_you : 'In case which you don''t find your answer, contact us here'
 click_here: 'Click here'
 adress : 'Adress : Am Krebsbach 2g, 79241 Ihringen, Germany'
+imprint : 'Site name: Kaiserstuhl Escape
+
+Site URL: https://kaiserstuhl-escape.de/
+
+Site owner: Kaisersthul escape Inc.
+
+Postal address: Am Krebsbach 2g, 79241 Ihringen, Germany
+
+Email address: contact@kaiserstuhl-escape.de
+
+Telephone number: +1 (555) 123-4567
+
+Data Protection Officer: Jane Doe
+
+E-mail address of the data protection officer: privacy@kaiserstuhl-escape.de
+
+Use of cookies: The site uses cookies to improve the user experience and to analyse site traffic.
+
+Data collected: kaiserstuhl escape collects information such as name, email address and phone number from users when they book an online escape game.
+
+Data Sharing: kaiserstuhl escape does not share users'' personal data with third parties except as necessary to provide the requested services.
+
+Data Security: kaiserstuhl escape uses appropriate security measures to protect user data, including encryption of sensitive data.
+
+User rights: Users have the right to access, modify and delete their personal data. They may also request that the processing of their data be restricted.
+
+Changes to the imprint: kaiserstuhl escape reserves the right to change this imprint at any time. Users will be informed of any significant changes.'
+privacy : 'KAISERSTUHL ESCAPE PRIVACY POLICY
+
+At Kaiserstuhl Escape, we are committed to protecting the privacy of your personal information. This privacy policy explains how we collect, use and share your personal information when you visit our website and use our services.
+
+INFORMATION WE COLLECT
+
+When you visit our website, we automatically collect certain information about your device, including your IP address, login information, browser type and version, time zone settings, browser plugin types and versions, operating system and platform. We also collect information about your visit to our website, including the pages you visit, the time you spend on each page, click-through information and navigation paths.
+  
+  When you book one of our escape games, we also collect information that you provide to us, such as your name, email address and telephone number.
+  
+  HOW WE USE YOUR INFORMATION
+  
+  We use the information we collect to improve the user experience on our website, to provide our escape game services, to process bookings, to process payments and to contact you for service or support.
+  
+  We may also use the information we collect to improve our products and services, conduct market research and surveys, and communicate with you about special offers and promotions.
+  
+  HOW WE SHARE YOUR INFORMATION
+
+We only share your personal information with third parties in the following circumstances:
+  
+  When necessary to provide our services, such as processing payments or booking escape game rooms;
+  To comply with applicable laws and regulations, court or government orders, or to protect our legitimate rights and interests;
+  With your express consent.
+  PROTECTION OF YOUR INFORMATION
+  
+  We take reasonable steps to protect your personal information from loss, theft, misuse, unauthorised access, disclosure, alteration and destruction.
+  
+  YOUR RIGHTS AND CHOICES
+  
+  You may access, change or delete your personal information at any time by contacting us at the email or postal address listed below.
+  
+  If you no longer wish to receive marketing communications from us, you may unsubscribe by clicking on the unsubscribe link provided in each marketing email we send.
+  
+  CHANGES TO OUR PRIVACY POLICY
+  
+  We reserve the right to change this privacy policy at any time. Any changes to our privacy policy will be posted on our website and you will be notified by email if the changes are material.
+  
+  CONTACT INFORMATION
+
+If you have any questions about our privacy policy or if you wish to exercise your rights under this policy, please contact us at the following address
+  
+  Kaiserstuhl Escape
+Musterstraße 123
+79098 Freiburg
+Deutschland
+
+E-mail: info@kaiserstuhl-escape.de
+
+COOKIES
+
+We use cookies on our website to enhance your user experience, personalise content and advertisements, and analyse website traffic. Cookies are small text files stored on your computer or mobile device when you visit our website.
+
+You can disable cookies in your browser settings, but this may adversely affect the user experience on our website.
+  
+  ANALYTICS
+  
+  We use third-party analytics services, such as Google Analytics, to track and analyse our website traffic. These services may collect information about your use of our website, including your IP address, the pages you visit, the time you spend on each page, click-through information and navigation paths.
+  
+  We use this information to improve our website, to understand how users interact with our website, and to conduct market analysis and surveys.
+  
+  RIGHTS OF USERS FROM THE EU
+
+If you are a user based in the European Union, you have certain rights under the General Data Protection Regulation (GDPR), including:
+  
+  The right to access your personal information;
+  The right to rectify or delete your personal information;
+  The right to restrict the processing of your personal information;
+  The right to object to the processing of your personal information;
+  The right to data portability.
+  To exercise any of these rights, please contact us at the email or postal address above.
+  
+  We will respond to your request in a timely manner and in accordance with applicable legal requirements.
+
+Last update: 13 April 2023'
+ptandconditions : 'Please read the following terms and conditions of use carefully before using the Kaiserstuhl Escape website. By accessing this website, you agree to these terms and conditions of use in their entirety. If you do not agree with these terms and conditions, please do not use our website.
+
+USE OF THE WEBSITE
+1.1. You agree to use this website only for lawful purposes and in accordance with these terms and conditions.
+
+1.2. You agree not to use this website in any way that may cause harm to Kaiserstuhl Escape, its employees, its business partners or any other stakeholder.
+
+1.3. You agree not to use this website to collect personal data or information about other website users.
+
+1.4. You agree not to use this website to send or disseminate spam, advertising messages or any other type of unsolicited message.
+
+1.5. You agree not to use this website to upload or transmit viruses, Trojan horses or any other malicious code.
+
+INTELLECTUAL PROPERTY
+2.1. All content, text, images, logos, trademarks and other intellectual property on this website are the property of Kaiserstuhl Escape or its licensors.
+
+2.2. You may not copy, distribute, modify, display, reproduce, publish, license, create derivative works from, transfer or sell any content or intellectual property on this website.
+
+LIMITATION OF LIABILITY
+3.1 Kaiserstuhl Escape is not liable for any direct, indirect, special, consequential or punitive loss or damage, including loss of profits or loss of data, arising out of the use of or inability to use this website.
+
+3.2 Kaiserstuhl Escape does not warrant that this website will always be available, error or virus free, or that the information on this website will be accurate or up to date.
+
+CHANGES TO THE TERMS AND CONDITIONS OF USE
+4.1 Kaiserstuhl Escape reserves the right to change these terms and conditions of use at any time. Your continued use of this Website following any changes to these terms and conditions of use will mean that you accept the changes made.
+
+APPLICABLE LAW AND JURISDICTION
+5.1. The terms and conditions of use are governed by the laws of Germany and any dispute arising out of or in connection with these terms and conditions of use shall be subject to the exclusive jurisdiction of the courts of Germany.
+
+Last update: 13 April 2023'
