--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -28,3 +28,134 @@ our_escape_game : 'Nos Escape Game'
 in_case_which_you : 'Si vous ne trouvez pas votre réponse, contactez-nous ici'
 click_here : 'Cliquez ici'
 adress : 'Adresse : Am Krebsbach 2g, 79241 Ihringen, Allemagne'
+imprint : 'Nom du site : Kaiserstuhl Escape
+
+URL du site : https://kaiserstuhl-escape.de/
+
+Propriétaire du site : Kaiserstuhl escape Inc.
+
+Adresse postale : Am Krebsbach 2g, 79241 Ihringen, Allemagne
+
+Adresse e-mail : contact@kaiserstuhl-escape.de
+
+Numéro de téléphone : +1 (555) 123-4567
+
+Responsable de la protection des données : Jane Doe
+
+Adresse e-mail du responsable de la protection des données : privacy@kaiserstuhl-escape.de
+
+Utilisation des cookies : Le site utilise des cookies pour améliorer l''expérience utilisateur et pour analyser le trafic du site.
+
+Données collectées : kaiserstuhl escape collecte des informations telles que le nom, l''adresse e-mail et le numéro de téléphone des utilisateurs lorsqu''ils réservent un escape game en ligne.
+
+Partage de données : kaiserstuhl escape ne partage pas les données personnelles des utilisateurs avec des tiers, sauf si cela est nécessaire pour fournir les services demandés.
+
+Sécurité des données : kaiserstuhl escape utilise des mesures de sécurité appropriées pour protéger les données des utilisateurs, y compris le chiffrement des données sensibles.
+
+Droits des utilisateurs : Les utilisateurs ont le droit d''accéder, de modifier et de supprimer leurs données personnelles. Ils peuvent également demander la limitation du traitement de leurs données.
+
+Modifications de l''imprint : kaiserstuhl escape se réserve le droit de modifier cet imprint à tout moment. Les utilisateurs seront informés de toute modification importante.'
+privacy : 'POLITIQUE DE CONFIDENTIALITÉ DE KAISERSTUHL ESCAPE
+
+Chez Kaiserstuhl Escape, nous sommes engagés à protéger la confidentialité de vos informations personnelles. Cette politique de confidentialité explique comment nous collectons, utilisons et partageons vos informations personnelles lorsque vous visitez notre site web et utilisez nos services.
+
+INFORMATIONS QUE NOUS COLLECTONS
+
+Lorsque vous visitez notre site web, nous collectons automatiquement certaines informations sur votre appareil, y compris votre adresse IP, vos informations de connexion, le type et la version de votre navigateur, les paramètres de fuseau horaire, les types et versions de plugins de navigateur, votre système d''exploitation et votre plateforme. Nous collectons également des informations sur votre parcours sur notre site web, y compris les pages que vous visitez, le temps que vous passez sur chaque page, les informations de clics et les chemins de navigation.
+  
+  Lorsque vous réservez l''un de nos escape games, nous collectons également les informations que vous nous fournissez, telles que votre nom, votre adresse e-mail et votre numéro de téléphone.
+  
+  COMMENT NOUS UTILISONS VOS INFORMATIONS
+  
+  Nous utilisons les informations collectées pour améliorer l''expérience utilisateur sur notre site web, fournir nos services d''escape games, traiter les réservations, gérer les paiements et vous contacter pour des questions de service ou de support.
+  
+  Nous pouvons également utiliser les informations collectées pour améliorer nos produits et services, effectuer des analyses de marché et des enquêtes, et communiquer avec vous sur des offres et des promotions spéciales.
+  
+  COMMENT NOUS PARTAGEONS VOS INFORMATIONS
+
+Nous ne partageons vos informations personnelles avec des tiers que dans les cas suivants :
+  
+  Lorsque cela est nécessaire pour fournir nos services, tels que le traitement des paiements ou la réservation de salles d''escape game ;
+  Pour respecter les lois et réglementations applicables, les ordonnances d''un tribunal ou d''une autorité gouvernementale, ou pour protéger nos droits et intérêts légitimes ;
+  Avec votre consentement exprès.
+  PROTECTION DE VOS INFORMATIONS
+  
+  Nous prenons des mesures raisonnables pour protéger vos informations personnelles contre la perte, le vol, l''utilisation abusive, l''accès non autorisé, la divulgation, l''altération et la destruction.
+  
+  VOS DROITS ET CHOIX
+  
+  Vous pouvez accéder, modifier ou supprimer vos informations personnelles à tout moment en nous contactant à l''adresse e-mail ou postale indiquée ci-dessous.
+  
+  Si vous ne souhaitez plus recevoir de communications marketing de notre part, vous pouvez vous désabonner en cliquant sur le lien de désabonnement fourni dans chaque e-mail marketing que nous envoyons.
+  
+  MODIFICATIONS DE NOTRE POLITIQUE DE CONFIDENTIALITÉ
+  
+  Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification apportée à notre politique de confidentialité sera publiée sur notre site web et vous sera notifiée par e-mail si les modifications sont importantes.
+  
+  COORDONNÉES
+
+Si vous avez des questions sur notre politique de confidentialité ou si vous souhaitez exercer vos droits en vertu de cette politique, veuillez nous contacter à l''adresse suivante :
+  
+  Kaiserstuhl Escape
+Musterstraße 123
+79098 Freiburg
+Deutschland
+
+E-mail : info@kaiserstuhl-escape.de
+
+COOKIES
+
+Nous utilisons des cookies sur notre site web pour améliorer votre expérience utilisateur, personnaliser le contenu et les publicités, et analyser le trafic du site web. Les cookies sont de petits fichiers texte stockés sur votre ordinateur ou votre appareil mobile lorsque vous visitez notre site web.
+
+Vous pouvez désactiver les cookies dans les paramètres de votre navigateur, mais cela peut affecter négativement l''expérience utilisateur sur notre site web.
+  
+  ANALYTIQUES
+  
+  Nous utilisons des services d''analyse tiers, tels que Google Analytics, pour suivre et analyser le trafic de notre site web. Ces services peuvent collecter des informations sur votre utilisation de notre site web, y compris votre adresse IP, les pages que vous visitez, le temps que vous passez sur chaque page, les informations de clics et les chemins de navigation.
+  
+  Nous utilisons ces informations pour améliorer notre site web, comprendre comment les utilisateurs interagissent avec notre site web, et pour effectuer des analyses de marché et des enquêtes.
+  
+  DROITS DES UTILISATEURS DE L''UE
+
+Si vous êtes un utilisateur basé dans l''Union européenne, vous disposez de certains droits en vertu du Règlement général sur la protection des données (RGPD), y compris :
+  
+  Le droit d''accéder à vos informations personnelles ;
+  Le droit de rectifier ou de supprimer vos informations personnelles ;
+  Le droit de limiter le traitement de vos informations personnelles ;
+  Le droit de vous opposer au traitement de vos informations personnelles ;
+  Le droit à la portabilité des données.
+  Pour exercer l''un de ces droits, veuillez nous contacter à l''adresse e-mail ou postale indiquée ci-dessus.
+  
+  Nous répondrons à votre demande dans les délais et conformément aux exigences légales applicables.
+
+Dernière mise à jour : 13 avril 2023'
+ptandconditions : 'Merci de bien vouloir lire attentivement les conditions générales d''utilisation suivantes avant d''utiliser le site web de Kaiserstuhl Escape. En accédant à ce site web, vous acceptez ces conditions générales d''utilisation dans leur intégralité. Si vous n''acceptez pas ces conditions générales d''utilisation, veuillez ne pas utiliser notre site web.
+  
+  UTILISATION DU SITE WEB
+  1.1. Vous acceptez d''utiliser ce site web uniquement à des fins légales et conformément à ces conditions générales d''utilisation.
+  
+  1.2. Vous acceptez de ne pas utiliser ce site web de manière à causer un préjudice à Kaiserstuhl Escape, à ses employés, à ses partenaires commerciaux ou à toute autre partie prenante.
+  
+  1.3. Vous acceptez de ne pas utiliser ce site web pour recueillir des données personnelles ou des informations sur d''autres utilisateurs du site web.
+  
+  1.4. Vous acceptez de ne pas utiliser ce site web pour envoyer ou diffuser du spam, des messages publicitaires ou tout autre type de message non sollicité.
+  
+  1.5. Vous acceptez de ne pas utiliser ce site web pour télécharger ou transmettre des virus, des chevaux de Troie ou tout autre code malveillant.
+  
+  PROPRIÉTÉ INTELLECTUELLE
+  2.1. Tous les contenus, textes, images, logos, marques de commerce et autres éléments de propriété intellectuelle sur ce site web sont la propriété de Kaiserstuhl Escape ou de ses concédants de licence.
+  
+  2.2. Vous n''êtes pas autorisé à copier, distribuer, modifier, afficher, reproduire, publier, concéder sous licence, créer des œuvres dérivées, transférer ou vendre tout contenu ou élément de propriété intellectuelle de ce site web.
+  
+  LIMITATION DE RESPONSABILITÉ
+  3.1. Kaiserstuhl Escape n''est pas responsable des pertes ou dommages directs, indirects, spéciaux, consécutifs ou punitifs, y compris la perte de profits ou la perte de données, résultant de l''utilisation de ce site web ou de l''incapacité à l''utiliser.
+  
+  3.2. Kaiserstuhl Escape ne garantit pas que ce site web sera toujours disponible, exempt d''erreurs ou de virus, ou que les informations sur ce site web seront exactes ou à jour.
+  
+  MODIFICATIONS DES CONDITIONS GÉNÉRALES D''UTILISATION
+  4.1. Kaiserstuhl Escape se réserve le droit de modifier ces conditions générales d''utilisation à tout moment. Votre utilisation continue de ce site web après toute modification de ces conditions générales d''utilisation signifie que vous acceptez les modifications apportées.
+  
+  LOI APPLICABLE ET JURIDICTION
+  5.1. Les conditions générales d''utilisation sont régies par les lois de l''Allemagne et tout litige découlant de ou en relation avec ces conditions générales d''utilisation sera soumis à la compétence exclusive des tribunaux de l''Allemagne.
+
+Dernière mise à jour : 13 avril 2023'
